--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,32 @@
+#JAVA
 # Compiled class file
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
-*.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#INTELLIJ IDEA
+# User-specific stuff:
+.idea/
+*.iml
+out/
+
+#Serenity
+target/
+build/
+
+#gradle
+.gradle/
+build/
+history/
+bin/
+
+# Maven
+log/
