--- a/serenityTest/build.gradle
+++ b/serenityTest/build.gradle
@@ -28,6 +28,17 @@ buildscript {
         classpath("net.serenity-bdd:serenity-gradle-plugin:$rootProject.ext.serenityGradleVersion")
     }
 }
+//Sonar
+sonarqube{
+    properties{
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.login", "5e44098fff5f4f9c3d161765bbd9fec726facbbb"
+        property "sonar.organization", "sanchezvegaing"
+        property "sonar.projectKey", "SerenityDO-sanchezvegaing"
+        property "sonar.scm.disable", "True"
+    }
+}
+
 
 dependencies {
     implementation group: 'net.serenity-bdd', name: 'serenity-cucumber5', version: "$rootProject.ext.serenityCucumberVersion"
